--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -453,9 +453,10 @@ gui.linkgrabber.menu.hostSelectionMore = Weitere Hoster
 gui.linkgrabber.menu.hostSelectionPackageOnly = Nur aktuelles Paket
 gui.linkgrabber.menu.hostSelectionRemove = Restliche Links verwerfen
 gui.linkgrabber.menu.selection = Auswahl
-gui.linkgrabber.menu.selection.freemirror = Free Mirrorauswahl
-gui.linkgrabber.menu.selection.premiummirror = Premium Mirrorauswahl
-gui.linkgrabber.menu.selection.prioritymirror = Priorität Mirrorauswahl
+gui.linkgrabber.menu.selection.free = Free
+gui.linkgrabber.menu.selection.mirror = Mirrorauswahl
+gui.linkgrabber.menu.selection.premium = Premium
+gui.linkgrabber.menu.selection.priority = Priorität
 gui.linkgrabber.packagetab.lbl.comment = Kommentar
 gui.linkgrabber.packagetab.lbl.name = Paketname
 gui.linkgrabber.packagetab.lbl.password = Archivpasswort
