--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -216,7 +216,10 @@ gui.config.general.name = General
 gui.config.general.plaf = Style(needs JD-restart)
 gui.config.general.startDownloadsOnStartUp = Start downloading at application start
 gui.config.general.theme = Theme
-gui.config.general.toDoWithDownloads = Finished downloads ...
+gui.config.general.toDoWithDownloads = Remove finished downloads ...
+gui.config.general.toDoWithDownloads.atStart = at startup
+gui.config.general.toDoWithDownloads.immediate = immediately
+gui.config.general.toDoWithDownloads.never = never
 gui.config.general.webupdate.auto = Webupdate:  start automatically!
 gui.config.general.webupdate.beta = Update to BETA Version (Need restart)
 gui.config.general.webupdate.disable = Update only at user request
@@ -396,6 +399,7 @@ gui.config.unrar.enabled = Enable automatic extraction
 gui.config.unrar.extractfolder = Folder to extract:
 gui.config.unrar.extractfolderenabled = Extract to folder (if you don't want to extract to the download directory)
 gui.config.unrar.overwrite = Overwrite existing file
+gui.config.unrar.passwordlist = Password List
 gui.config.unrar.passwordlist.btn_cancel.mnem = c
 gui.config.unrar.passwordlist.btn_cancel.name = Cancel
 gui.config.unrar.passwordlist.btn_save.mnem = s
@@ -658,12 +662,9 @@ gui.menu.action.viewlog.accel = F5
 gui.menu.action.viewlog.desc = If selected, the log window is displayed
 gui.menu.action.viewlog.mnem = L
 gui.menu.action.viewlog.name = Show log window
-gui.menu.action_mnem = K
 gui.menu.addons = Addons
 gui.menu.edit = Edit
-gui.menu.edit_mnem = B
 gui.menu.extra = Extras
-gui.menu.extra_mnem = E
 gui.menu.file = File
 gui.menu.file.load = Open container
 gui.menu.file.load_container = Load container
@@ -707,7 +708,7 @@ gui.table.contextmenu.dlc = Create DLC
 gui.table.contextmenu.dlc_package = Create DLC
 gui.table.contextmenu.downloadDir = Open directory
 gui.table.contextmenu.editdownloadDir = Edit directory
-gui.table.contextmenu.editpackagename = Paketname ändern
+gui.table.contextmenu.editpackagename = Change package name
 gui.table.contextmenu.enable = Enable
 gui.table.contextmenu.enablepackage = Enable
 gui.table.contextmenu.info = Details
@@ -873,8 +874,9 @@ modules.reconnect.types.extern = External
 modules.reconnect.types.liveheader = LiveHeader/Curl
 modules.unrar.enabled.instanthelp = http://ns2.km32221.keymachine.de/jdownloader/web/page.php?id=17
 modules.unrar.name = RAR extractor
-plugins.SerienJunkies.CatDialog.action = Chose an action
+plugins.SerienJunkies.CatDialog.action = Choose an action
 plugins.SerienJunkies.CatDialog.title = SerienJunkies ::CAT::
+plugins.SerienJunkies.decryptImmediately = Decrypt immediately
 plugins.container.ccf.useCCF2RSDF = Use CCF2RSDF instead of Online Decrypter
 plugins.container.decrypt = Decrypt link %s
 plugins.container.dlc.extendedInfos = Ask for extended information at creation of DLC
@@ -883,7 +885,7 @@ plugins.container.exit = Finished. Found %s links
 plugins.container.found = Process %s links
 plugins.container.open = Open Container
 plugins.decrypt.general.downloadsDecrypted = Downloads decrypted
-plugins.decrypt.general.hosterSelection = Hosterselection
+plugins.decrypt.general.hosterSelection = Hoster selection
 plugins.decrypt.rlslog.hosterlist = Hosterlist (one hoster per row)
 plugins.decrypt.shareonall.ignorelist = List of ignored hoster (one hoster per row)
 plugins.host.netload.try2SimultanDownloads = Try to load 2 files simultaneously
