--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -219,7 +219,10 @@ gui.config.general.link.winne = Wine HQ(Linux)
 gui.config.general.link.wireshark = Wireshark
 gui.config.general.loggerLevel = Level für's Logging
 gui.config.general.name = Allgemein
-gui.config.general.toDoWithDownloads = Fertig gestellte Downloads ...
+gui.config.general.toDoWithDownloads = Entferne fertig gestellte Downloads ...
+gui.config.general.toDoWithDownloads.atStart = beim Programstart
+gui.config.general.toDoWithDownloads.immediate = sofort
+gui.config.general.toDoWithDownloads.never = nicht
 gui.config.general.webupdate.auto = automatisch, ohne Nachfrage ausführen
 gui.config.general.webupdate.beta = Auf Betaversion aktualisieren(Neustart nötig)
 gui.config.general.webupdate.disable = Update nur manuell durchführen
@@ -393,6 +396,7 @@ gui.config.unrar.enabled = Automatisches Entpacken aktivieren
 gui.config.unrar.extractfolder = Zielordner:
 gui.config.unrar.extractfolderenabled = Im Zielordner entpacken (Wenn die Dateien nicht im Downloadordner entpackt werden sollen)
 gui.config.unrar.overwrite = Schon vorhandene Dateien überschreiben
+gui.config.unrar.passwordlist = Passwort Liste
 gui.config.unrar.passwordlist.btn_cancel.mnem = a
 gui.config.unrar.passwordlist.btn_cancel.name = Abbrechen
 gui.config.unrar.passwordlist.btn_save.mnem = s
@@ -600,14 +604,10 @@ gui.menu.action.wiki.accel = CTRL+W
 gui.menu.action.wiki.desc = JDownloader Wikipedia öffnen
 gui.menu.action.wiki.mnem = W
 gui.menu.action.wiki.name = Wikipedia öffnen
-gui.menu.action_mnem = K
 gui.menu.addons = Addons
 gui.menu.edit = Bearbeiten
-gui.menu.edit_mnem = B
 gui.menu.extra = Extras
-gui.menu.extra_mnem = E
 gui.menu.file = Datei
-gui.menu.file_mnem = D
 gui.menu.plugins = Plugins
 gui.menu.plugins.container = Container
 gui.menu.plugins.decrypt = Decrypter
@@ -913,6 +913,7 @@ plugin.rapidshare.tickettime = %s auf Ticket warten
 plugin.serienjunkies.archiveincomplete = Archiv nicht komplett
 plugins.SerienJunkies.CatDialog.action = Wählen Sie eine Aktion aus:
 plugins.SerienJunkies.CatDialog.title = SerienJunkies ::CAT::
+plugins.SerienJunkies.decryptImmediately = Sofort entschlüsseln
 plugins.YouTube.ConvertDialog.3gp = Video (3GP)
 plugins.YouTube.ConvertDialog.Flv = Video (FLV)
 plugins.YouTube.ConvertDialog.FlvAndMp3 = Audio und Video (MP3 & FLV)
