--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -386,6 +386,8 @@ gui.downloadlink.aborted = [aborted]
 gui.downloadlink.disabled = [deactivated]
 gui.downloadlink.offline = [offline]
 gui.downloadlink.status.crcfailed = Checksum error
+gui.downloadlink.status.crcok = Checksum OK
+gui.downloadlist.delete = Delete selected links ?
 gui.downloadlist.tooltip.connections = Act. connections:
 gui.downloadlist.tooltip.partnum = Parts:
 gui.downloadlist.tooltip.partsactive = Active:
@@ -682,16 +684,16 @@ gui.tooltip.plugin_decrypt = Decryption Plug-ins
 gui.tooltip.plugin_host = Host Plug-ins
 gui.tooltip.statusbar.premium = On/Off of the Premiumdownloads
 gui.tooltip.statusbar.simultan_downloads = Max. simultan downloads
-gui.tooltip.statusbar.speedlimiter = Speedlimitation(kb/s) [0:infinite]
+gui.tooltip.statusbar.speedlimiter = Speed limitation(kb/s) [0:infinite]
 gui.treetable.header_1.tree = Packages
 gui.treetable.header_2.files = Files
 gui.treetable.header_3.hoster = Hoster
 gui.treetable.header_4.status = Status
 gui.treetable.header_5.progress = Progress
 gui.treetable.packagestatus.links_active = active
-gui.treetable.part.label = File 
-gui.treetable.part.label_package = Package 
-gui.treetable.part.label_update = Update 
+gui.treetable.part.label = File
+gui.treetable.part.label_package = Package
+gui.treetable.part.label_update = Update
 gui.treetable.parts = Part(s)
 gui.warning.reconnectFailed = Reconnect failed!
 gui.warning.reconnectSuccess = Reconnect successfully!
@@ -1055,6 +1057,19 @@ plugins.optional.newsfeeds.getLatestSubscribedDownloads = Get latest subscribed 
 plugins.optional.newsfeeds.manageDownloadSubscriptions = Manage Download Subscriptions
 plugins.optional.newsfeeds.manageFeeds = Manage Feeds
 plugins.optional.newsfeeds.pluginTitle = Newsfeed Check
+plugins.trayicon.popup.bottom.simDls = Simultaneous downloads
+plugins.trayicon.popup.bottom.speed = Speedlimitation(kb/s)
+plugins.trayicon.popup.menu.add = Add downloads
+plugins.trayicon.popup.menu.config = Configuration
+plugins.trayicon.popup.menu.exit = Exit
+plugins.trayicon.popup.menu.load = Load Container
+plugins.trayicon.popup.menu.log = Show log window
+plugins.trayicon.popup.menu.reconnect = Manual reconnect
+plugins.trayicon.popup.menu.start = Start Download
+plugins.trayicon.popup.menu.toggleClipboard = Enable/Disable monitor clipboard
+plugins.trayicon.popup.menu.toggleReconnect = Enable/Disable reconnect
+plugins.trayicon.popup.menu.update = Execute update
+plugins.trayicon.popup.title = JDownloader
 gui.frame.packageinfo.entryPassword = Password
 gui.linkgrabber.cmb.insertAtPosition = Insert at:
 gui.linkgrabber.menu.edit.splitByHost = Split packages by hoster
