--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -227,7 +227,6 @@ gui.config.httpreconnect.tab_router = Router
 gui.config.httpreconnect.testreconnect = Reconnect router
 gui.config.httpreconnect.userName = User name
 gui.config.httpreconnect.waitTimeForIPCheck = Timeout for first IP-Check (sec)
-gui.config.infoFileWriter.name = Info file
 gui.config.interaction.noAction = No action
 gui.config.jac.column.method = Method
 gui.config.jac.column.use = Use
@@ -329,7 +328,6 @@ gui.config.tabLables.eventManager = Event Manager
 gui.config.tabLables.general = Main
 gui.config.tabLables.gui = Interface
 gui.config.tabLables.hostPlugin = Hosts
-gui.config.tabLables.infoFileWriter = Info-File Writer
 gui.config.tabLables.jac = jAntiCaptcha
 gui.config.tabLables.links = Related links
 gui.config.tabLables.optionalPlugin = Add-ons
@@ -747,11 +745,6 @@ interaction.externreconnect.toString = Execute external reconnect application
 interaction.externreconnect.waitForIp = Timeout new IP (sec)
 interaction.externreconnect.waitForTermination = Timeout for cmd execution (sec)
 interaction.externreconnect.waitTimeToFirstIPCheck = Timeout for first IP-Check (sec)
-interaction.infoFileWriter.content = Content:
-interaction.infoFileWriter.disable = Activate Infofilewriter
-interaction.infoFileWriter.filename = Filename:
-interaction.infoFileWriter.name = Info File Writer
-interaction.infoFileWriter.variables = Avaiable variables
 interaction.jdexit.name = Exit jD
 interaction.liveHeader.name = HTTP LiveHeader
 interaction.liveHeader.progress.0_title = HTTP LiveHeader Reconnect
@@ -861,9 +854,14 @@ plugins.hoster.rapidshare.com.happyHours = Happy Hour Check
 plugins.hoster.rapidshare.com.hhactive.html = <link href='http://jdownloader.org/jdcss.css' rel='stylesheet' type='text/css' /><body><div><p style='text-align:center'><img src='http://jdownloader.org/img/hh.jpg' /><br>Active until %s<br>Last check from %s<br>Last happy hour from %s to %s</p></div></body>
 plugins.hoster.rapidshare.com.important = Important!
 plugins.hoster.rapidshare.com.increaseTicketTime = Increase ticket time (0%-500%)
-plugins.hoster.rapidshare.com.info.html = <table width='100%%'><tr><th style='text-align:right; padding-right:10px'>Valid until</th><td style='text-align:left'>%s</td></tr><tr><th style='text-align:right; padding-right:10px'>Traffic left</th><td style='text-align:left'>%s</td></tr><tr><th style='text-align:right; padding-right:10px'>Files</th><td style='text-align:left'>%s</td></tr><tr><th style='text-align:right; padding-right:10px'>Rapidpoints</th><td style='text-align:left'>%s</td></tr><tr><th style='text-align:right; padding-right:10px'>Used Space</th><td style='text-align:left'>%s</td></tr><tr><th style='text-align:right; padding-right:10px'>Traffic Share left</th><td style='text-align:left'>%s</td></tr></table>
 plugins.hoster.rapidshare.com.info.expired = expired
+plugins.hoster.rapidshare.com.info.files = Files
+plugins.hoster.rapidshare.com.info.rapidpoints = RapidPoints
 plugins.hoster.rapidshare.com.info.title = Accountinformation for %s
+plugins.hoster.rapidshare.com.info.trafficLeft = Traffic left
+plugins.hoster.rapidshare.com.info.trafficShareLeft = Traffic Share left
+plugins.hoster.rapidshare.com.info.usedSpace = Used Space
+plugins.hoster.rapidshare.com.info.validUntil = Valid until
 plugins.hoster.rapidshare.com.loadFirstBytes = Load only first * kilobytes for each file (-1 = disable)
 plugins.hoster.rapidshare.com.loadinfo = Loading account information for rapidshare.com
 plugins.hoster.rapidshare.com.loadpreBytes = Load only the first * Bytes of a file [-1 to disable]
@@ -891,6 +889,10 @@ plugins.optional.folderwatch.name = FolderWatch
 plugins.optional.folderwatch.waittime = Waittime
 plugins.optional.getter.name = Getter
 plugins.optional.getter.port = Port:
+plugins.optional.infoFileWriter.content = Content:
+plugins.optional.infoFileWriter.filename = Filename:
+plugins.optional.infoFileWriter.name = Info File Writer
+plugins.optional.infoFileWriter.variables = Avaiable variables
 plugins.optional.jdlowspeed.maxspeed = Max. internetspeed in kb/s (DSL 3000≈350kb/s)
 plugins.optional.jdlowspeed.minspeed = Min speed of a single download in kb/s
 plugins.optional.jdlowspeed.name = LowSpeed detection
