--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -1,7 +1,6 @@
-URL could not be opened = URL konnte nicht geöffnet werden
 addons.jdlowspeed.statusmessage.disabled = Low Speederkennung ausschalten
 addons.jdlowspeed.statusmessage.enabled = Low Speederkennung einschalten
-addons.jdshutdown.menu.disable = Herunterfahren
+addons.jdshutdown.menu.disable = Herunterfahren deaktivieren
 addons.jdshutdown.menu.enable = Herunterfahren aktivieren
 addons.jdshutdown.statusmessage.disabled = Das System wird nach dem Download NICHT heruntergefahren.
 addons.jdshutdown.statusmessage.enabled = Das System nach dem Download heruntergefahren.
@@ -273,7 +272,6 @@ gui.config.httpreconnect.tab_router = Router
 gui.config.httpreconnect.testreconnect = Testreconnect durchführen
 gui.config.httpreconnect.userName = Benutzername
 gui.config.httpreconnect.waitTimeForIPCheck = Wartezeit bis zum ersten IP-Check [sek]
-gui.config.infoFileWriter.name = Info Datei
 gui.config.interaction.getName = Interaction Konfiguration:
 gui.config.interaction.noAction = keine Aktion
 gui.config.jac.column.method = Methode
@@ -371,7 +369,6 @@ gui.config.tabLables.eventManager = Eventmanager
 gui.config.tabLables.general = Allgemein
 gui.config.tabLables.gui = Benutzeroberfläche
 gui.config.tabLables.hostPlugin = Host Plugins
-gui.config.tabLables.infoFileWriter = 'Info File Writer'
 gui.config.tabLables.jac = OCR/jAntiCaptcha
 gui.config.tabLables.links = Wichtige Links
 gui.config.tabLables.optionalPlugin = Addons
@@ -777,11 +774,6 @@ interaction.externreconnect.toString = Externes Reconnectprogramm aufrufen
 interaction.externreconnect.waitForIp = Auf neue IP warten [sek]
 interaction.externreconnect.waitForTermination = Warten x Sekunden bis Befehl beendet ist[sek]
 interaction.externreconnect.waitTimeToFirstIPCheck = Wartezeit bis zum ersten IP-Check[sek]
-interaction.infoFileWriter.content = Inhalt:
-interaction.infoFileWriter.disable = Infofilewriter aktivieren
-interaction.infoFileWriter.filename = Dateiname:
-interaction.infoFileWriter.name = Info File Writer
-interaction.infoFileWriter.variables = Verfügbare Parameter
 interaction.jdchat.deslanguage = in:
 interaction.jdchat.native = in:
 interaction.jdexit.name = Beenden
@@ -977,8 +969,13 @@ plugins.hoster.rapidshare.com.hhinactive.html = <link href='http://jdownloader.a
 plugins.hoster.rapidshare.com.increaseTicketTime = Ticketwartezeit verlängern (0%-500%)
 plugins.hoster.rapidshare.com.info.error = <div style='text-align:center; width:100%; height:100%; color:red;'><b>Account konnte nicht gefunden werden!</b></div>
 plugins.hoster.rapidshare.com.info.expired = abgelaufen
-plugins.hoster.rapidshare.com.info.html = <table width='100%%'><tr><th style='text-align:right; padding-right:10px'>Gültig bis</th><td style='text-align:left'>%s</td></tr><tr><th style='text-align:right; padding-right:10px'>Traffic übrig</th><td style='text-align:left'>%s</td></tr><tr><th style='text-align:right; padding-right:10px'>Dateien</th><td style='text-align:left'>%s</td></tr><tr><th style='text-align:right; padding-right:10px'>Rapidpunkte</th><td style='text-align:left'>%s</td></tr><tr><th style='text-align:right; padding-right:10px'>Belegter Speicher</th><td style='text-align:left'>%s</td></tr><tr><th style='text-align:right; padding-right:10px'>Traffic Share übrig</th><td style='text-align:left'>%s</td></tr></table>
+plugins.hoster.rapidshare.com.info.files = Dateien
+plugins.hoster.rapidshare.com.info.rapidpoints = RapidPoints
 plugins.hoster.rapidshare.com.info.title = Accountinfo für %s
+plugins.hoster.rapidshare.com.info.trafficLeft = Traffic übrig
+plugins.hoster.rapidshare.com.info.trafficShareLeft = TrafficShare übrig
+plugins.hoster.rapidshare.com.info.usedSpace = Belegter Speicher
+plugins.hoster.rapidshare.com.info.validUntil = Gültig bis
 plugins.hoster.rapidshare.com.loadinfo = Lade RS.com Account Informationen:
 plugins.hoster.rapidshare.com.loadpreBytes = Nur die ersten * Bytes jeder Datei laden[-1 to disable]
 plugins.hoster.rapidshare.com.offline = Keine Netzwerkverbindung
@@ -1005,6 +1002,7 @@ plugins.hoster.shareonlinebiz.captcha = Captcha Erkennung
 plugins.optional.JDLightTray.name = JDLightTrayIcon
 plugins.optional.RemoteControl.name = RemoteControl
 plugins.optional.RemoteControl.port = Port:
+plugins.optional.folderwatch.checkintervall = Checkintervall [min]
 plugins.optional.folderwatch.delete = Entfernen
 plugins.optional.folderwatch.folder = Ordner:
 plugins.optional.folderwatch.name = FolderWatch
@@ -1035,6 +1033,10 @@ plugins.optional.httpliveheaderscripter.gui.title = HTTP LiveHeader Skript Erste
 plugins.optional.httpliveheaderscripter.gui.validate.error = Skript nicht korrekt
 plugins.optional.httpliveheaderscripter.gui.validate.ok = Skript ist gültig
 plugins.optional.httpliveheaderscripter.name = HTTPLiveHeaderScripter
+plugins.optional.infoFileWriter.content = Inhalt:
+plugins.optional.infoFileWriter.filename = Dateiname:
+plugins.optional.infoFileWriter.name = Info File Writer
+plugins.optional.infoFileWriter.variables = Verfügbare Parameter
 plugins.optional.jdChat.gui.title = JD Chat
 plugins.optional.jdchat.doautotranslate = Chat übersetzen
 plugins.optional.jdchat.doautotranslateself = Übersetze alles was ich sage
